--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: 20px;
+  margin: 25px;
   background-color: #7B7474;
 }
 
@@ -10,8 +10,7 @@ h1 {
   background-color: #363535;
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: 150px;
-  margin: 10px;
+  text-align: center;
 }
 
 h2 {
@@ -28,4 +27,4 @@ br {
   display: block;
   content: ""; 
   margin-top: 5px;
-}
+}   
