--- a/style.css
+++ b/style.css
@@ -1,30 +1,69 @@
 body {
-  margin: 25px;
-  background-color: #7B7474;
+	display: flex;
+	align-items: center;
+	height: 100vh;
+	margin: 0; /* Remove default margin */
+	flex-direction: column; /* Display children in a column */
+	background-color: #363535;
+	font-family: Verdana;
 }
 
-h1 {
-  font-family: Verdana;
-  font-size: 30px;
-  color: white;
-  background-color: #363535;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  text-align: center;
+h1.title {
+    font-size: 60px;
+    color: white;
+    margin-top: 20px; /* Adjust this value as needed */
 }
 
-h2 {
-  font-family: Verdana;
-  font-size: 20px;
-  margin-top: 20px;
+.statement {
+	max-width: 600px; /* Adjust the width as needed */
+	color: white;
+	text-align: center;
+	margin-right: 20px; /* Adjust the right margin as needed */
+	margin-left: 20px; /* Adjust the left margin as needed */
+}
+
+
+h1.subtitle {
+	font-size: 40px;
+	margin-bottom: 20px;
+}
+
+.logo {
+	width: 100px;
+	height: auto;
+	margin-top: 40px;
 }
 
 p {
-    font-family: Verdana;
-}    
+	font-size: 22px;
+	margin-bottom: 30px;
+	line-height: 1.5;
+}
 
-br {
-  display: block;
-  content: ""; 
-  margin-top: 5px;
-}   
+@media screen and (max-width: 600px) {
+	h1.title {
+		font-size: 50px;
+	}
+
+	h1.subtitle {
+		font-size: 30px;
+	}
+
+	p {
+		font-size: 18px;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	h1.title {
+		font-size: 30px;
+	}
+
+	h1.subtitle {
+		font-size: 20px;
+	}
+
+	p {
+		font-size: 15px;
+	}
+} 
